# simple-db

./: .gitignore  README.md  config.py  csv_importer.py  db.py  mysql_importer.py  postgres_importer.py  pyproject.toml  query.py  query_delete.py  query_insert.py  query_select.py  query_update.py  requirements.txt  simple_db.py  test_query.py  test_query_delete.py  test_query_insert.py  test_query_select.py  test_query_update.py
