[tool.poetry]
name = "simple-db"
version = "0.1.0"
description = ""
authors = ["Danilo Fuchs <danilo_fuchs@hotmail.com>"]
readme = "README.md"
packages = [{include = "simple_db"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
