[tool.poetry]
name = "simple-db"
version = "0.1.0"
description = ""
authors = ["Danilo Fuchs <danilo_fuchs@hotmail.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.9"
tabulate = "^0.9.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.2"
pytest-watch = "^4.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
